fixed text overflow and added score and stats

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 
 .card {
   /* card will be the card the questions show up on. */
-  width: 75%;
+  width: 70%;
   display: flex;
   justify-content: center;
   /* align-content: center; */
@@ -57,6 +57,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .setAns {
